--- a/os-hardening/tasks/os-patch.yml
+++ b/os-hardening/tasks/os-patch.yml
@@ -18,7 +18,7 @@
     cache_valid_time: 3600
     name: linux-image-generic
     state: latest
-  when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
+  when: ansible_distribution == "{{ ansible_facts.os_family_1 }}"
   register: apt_update
 
 - name: Check if reboot required after kernel update on CentOS/RedHat servers
