--- a/os-hardening/vars/main.yml
+++ b/os-hardening/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for os-hardening
-os_family_1: ubuntu
-os_family_2: Red Hat Enterprise Linux
+os_family_1: 'Ubuntu' or 'Debian'
+os_family_2: 'Red Hat Enterprise Linux' or 'CentOS'
