--- a/os-hardening/tasks/os-patch.yml
+++ b/os-hardening/tasks/os-patch.yml
@@ -8,7 +8,7 @@
   yum:
     name="kernel"
     state=latest
-  when:  ansible_distribution == "{{ os_family_2 }}" #'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when:  ansible_distribution == '{{ os_family_2 }}' or ansible_distribution == '{{ os_family_3 }}'
   register: yum_update
 
 - name:  Upgrade kernel package on Ubuntu/Debian server
@@ -18,7 +18,7 @@
     cache_valid_time: 3600
     name: linux-image-generic
     state: latest
-  when: ansible_distribution == "{{ os_family_1 }}"
+  when: ansible_distribution == '{{ os_family_1 }}' or ansible_distribution == '{{ os_family_4 }}'
   register: apt_update
 
 - name: Check if reboot required after kernel update on CentOS/RedHat servers
@@ -30,13 +30,13 @@
 - name: Check if a reboot is required after kernel update on Ubuntu/Debian servers
   register: reboot_required_file
   stat: path=/var/run/reboot-required get_md5=no
-  when: ansible_distribution == "{{ os_family_1 }}" #'Ubuntu' or ansible_distribution == 'Debian'
+  when: ansible_distribution == '{{ os_family_1 }}' or ansible_distribution == '{{ os_family_4 }}'
 
 - name: Reboot CentOS/RedHat systems if kernel updated
   command: shutdown -r +1  "Rebooting CentOS/RedHat Servers After Kernel Patching"
   async: 0
   poll: 0
-  when: reboot_required.changed  and (ansible_distribution == "{{ os_family_2 }}" #'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux')
+  when: reboot_required.changed  and (ansible_distribution == '{{ os_family_2 }}' or ansible_distribution == '{{ os_family_3 }}')
   register: reboot_started_redhat
   ignore_errors: true
 
@@ -46,7 +46,7 @@
     removes: /var/run/reboot-required
   async: 300
   poll: 0
-  when: reboot_required_file.stat.exists and (ansible_distribution == "{{ os_family_1 }}" #'Ubuntu' or ansible_distribution == 'Debian')
+  when: reboot_required_file.stat.exists and (ansible_distribution == '{{ os_family_1 }}' or ansible_distribution == '{{ os_family_4 }}')
   register: reboot_started_ubuntu
   ignore_errors: true
 
